sandbox/in_arbeit/magick_6.9.12.98/sandbox/include-C/magick/magick/in_arbeiit/fertig/registry.h

/*
  Copyright 1999 ImageMagick Studio LLC, a non-profit organization
  dedicated to making software imaging solutions freely available.
  
  You may not use this file except in compliance with the License.  You may
  obtain a copy of the License at
  
    https://imagemagick.org/script/license.php
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.

  MagickCore registry methods.
*/
#ifndef MAGICKCORE_REGISTRY_H
#define MAGICKCORE_REGISTRY_H

typedef enum
{
  UndefinedRegistryType,
  ImageRegistryType,
  ImageInfoRegistryType,
  StringRegistryType
} RegistryType;

extern  char
  *GetNextImageRegistry(void);

extern  MagickBooleanType
  DefineImageRegistry(const RegistryType,const char *,ExceptionInfo *);
extern  MagickBooleanType
  DeleteImageRegistry(const char *);
extern  MagickBooleanType
  RegistryComponentGenesis(void);
extern  MagickBooleanType
  SetImageRegistry(const RegistryType,const char *,const void *,
    ExceptionInfo *);

extern  void
  *GetImageRegistry(const RegistryType,const char *,ExceptionInfo *);
extern  void
  RegistryComponentTerminus(void);
extern  void
  *RemoveImageRegistry(const char *);
extern  void
  ResetImageRegistryIterator(void);